--- a/Frontend/ClientApp/src/app/project-kali-linux/project-kali-linux.component.html
+++ b/Frontend/ClientApp/src/app/project-kali-linux/project-kali-linux.component.html
@@ -25,8 +25,9 @@
 </form>
 
 <hr />
-
-<form name="resultForm" [formGroup]="resultForm">
+<p *ngIf="error">Something went wrong. Please try again.</p>
+<p *ngIf="loading">Loading...</p>
+<form *ngIf="result" name="resultForm" [formGroup]="resultForm">
   <div class="row">
     <div class="col-sm-12">
       Nmap result:
@@ -46,5 +47,3 @@
 </form>
 
 <hr />
-
-<p>{{ result }}</p>
