--- a/Frontend/ClientApp/src/app/project-kali-linux/project-kali-linux.component.html
+++ b/Frontend/ClientApp/src/app/project-kali-linux/project-kali-linux.component.html
@@ -1,10 +1,12 @@
 <form name="toolingForm" [formGroup]="toolingForm" (ngSubmit)="onFormSubmit(toolingForm.value)">
   <input hidden="hidden" formControlName="projectId" />
   Host name:
-  <input type="text" class="form-control" placeholder="http://google.nl" formControlName="host" />
+  <input type="text" pattern="^(([a-zA-Z0-9]|[a-zA-Z0-9][a-zA-Z0-9\-]*[a-zA-Z0-9])\.)*([A-Za-z0-9]|[A-Za-z0-9][A-Za-z0-9\-]*[A-Za-z0-9])$"
+         title="Use a correct format for a hostname." class="form-control" placeholder="http://google.nl" formControlName="host" />
   <hr />
   IP address:
-  <input type="text" class="form-control" placeholder="172.217.6.35" formControlName="ip" />
+  <input type="text" pattern="\b(25[0-5]|2[0-4][0-9]|1[0-9][0-9]|[1-9]?[0-9])\.(25[0-5]|2[0-4][0-9]|1[0-9][0-9]|[1-9]?[0-9])\.(25[0-5]|2[0-4][0-9]|1[0-9][0-9]|[1-9]?[0-9])\.(25[0-5]|2[0-4][0-9]|1[0-9][0-9]|[1-9]?[0-9])\b"
+         title="Use a correct format for an IP address." class="form-control" placeholder="172.217.6.35" formControlName="ip" />
   <hr />
   <div class="row">
     <div class="col-sm-4">
