--- a/Frontend/ClientApp/src/app/project-ssllabs/project-ssllabs.component.html
+++ b/Frontend/ClientApp/src/app/project-ssllabs/project-ssllabs.component.html
@@ -20,6 +20,9 @@
   Server Name:
   <input class="form-control" formControlName="serverName" contenteditable="false" />
   <hr />
+  Ip addresses:
+  <input class="form-control" formControlName="ipAddresses" contenteditable="false" />
+  <hr />
   <h5>Server Key and Certificate</h5>
   Subject:
   <input class="form-control" formControlName="subject" contenteditable="false" />
