Fixed some errors in project details updating, project settings updating and ssllabs

--- a/Frontend/ClientApp/src/app/project-ssllabs/project-ssllabs.component.html
+++ b/Frontend/ClientApp/src/app/project-ssllabs/project-ssllabs.component.html
@@ -18,10 +18,10 @@
   <input class="form-control" style="font-size:x-large;" formControlName="grade" contenteditable="false" />
   <hr />
   Server Name:
-  <input class="form-control" formControlName="serverName" contenteditable="false" />
+  <textarea rows="2" class="form-control" formControlName="serverName" contenteditable="false" ></textarea>
   <hr />
   Ip addresses:
-  <input class="form-control" formControlName="ipAddresses" contenteditable="false" />
+  <textarea rows="2" class="form-control" formControlName="ipAddresses" contenteditable="false" ></textarea>
   <hr />
   <h5>Server Key and Certificate</h5>
   Subject:
